# markov

./: coinflip.dat_vocab.json  hidden_markov.py  hmmd-bestmodel.dat_vocab.json  hmmd-scaled.dat_vocab.json  markov.py  markov_hidden.py  markov_small_dict.py  preprocessor.py  setup.cfg  texts2.txt
evaluation/: hmmd.py
examples/: hm.txt  texts.txt  texts2.txt
markov/: __init__.py
markov/models/: gmm.py  markov.py  markov_gmm.py  markov_hidden.py  markov_hidden_scaled.py
markov/utils/: preprocessor.py  tools.py
