[metadata]
name = markovcollection
version =  0.0.1
description = A Collection of Markov Models
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = Sequence Prediction, Natural Language Processing, NLP
license = MIT License
classifiers =
  Framework :: Flask
  License :: OSI Approved :: MIT License
  Programming Lanuage :: Python :: 3
  Programming Lanuage :: Python :: 3.6

[options]
zip_safe = False
package_dir =
  =markov
packages = find_namespace:
install_requires =
  numpy

[options.packages.find]
  where = markov

#[options.entry_points]
#console_scripts =
#  plix-hi = plix.tb:say_hello
